# xnestdm

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
nixos/: module.nix
src/userdesk/: __init__.py  __main__.py  app.py  auth.py  session.py  session_entry.py  xsessions.py
src/xnestdm/: __main__.py  app.py  auth.py  clipboard.py  helper.py  helper_client.py  helper_protocol.py  helper_transport.py  session.py  xsessions.py
tests/: conftest.py  test_auth.py  test_clipboard.py  test_helper.py  test_helper_client.py  test_helper_protocol.py  test_main.py  test_session.py  test_ui.py  test_xsessions.py
