[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "xnestdm"
version = "0.1.0"
description = "A nested X11 display manager embedded with Xephyr"
requires-python = ">=3.11"
dependencies = [
  "pamela>=1.2",
  "PySide6>=6.7",
]

[project.scripts]
xnestdm = "xnestdm.__main__:main"
xnestdm-helper = "xnestdm.helper:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
